kube/gcp/general-ocr/general-ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: general-ocr
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: general-ocr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: general-ocr
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: general-ocr
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - general-ocr
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu.b"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "PreferNoSchedule"
      containers:
      - name: general-ocr
        image: luminainc/general-ocr:113807d2
        imagePullPolicy: Always
        startupProbe: null
        livenessProbe: null
        readinessProbe: null
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
