kube/gcp/general-ocr/general-ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: general-ocr-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: general-ocr
  annotations:
    cloud.google.com/backend-config: '{"default": "general-ocr-backendconfig"}'
spec:
  selector:
    app.kubernetes.io/name: general-ocr
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
