kube/gcp/general-ocr/general-ocr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: general-ocr-ingress
  namespace: chunkmydocs
  labels:
    app: general-ocr
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: general-ocr-service
            port:
              number: 8000
